--- a/kubinec_model_preprint.Rmd
+++ b/kubinec_model_preprint.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Mediation Analysis of Partisanship and Policies on COVID-19 Infections via Bayesian Latent Variable Modeling"
-date: "February 8, 2022"
+title: "A Bayesian Latent Variable Model for Semi-parametric Identification and Analysis of COVID-19 Infection Rates"
+date: "May 31st, 2023"
 author: 
   - Robert Kubinec:
       email: rmk7@nyu.edu
@@ -36,7 +36,7 @@ output:
       - '--lua-filter=scholarly-metadata.lua'
       - '--lua-filter=author-info-blocks.lua'
 bibliography: BibTexDatabase.bib
-abstract: "In this paper we present an original approach for measuring COVID-19 infections while incorporating testing bias and use it to understand the mechanisms through which social  and political factors affected the pandemic. To establish empirical relationships, we analyzed COVID-19 case and test data from the fifty United States from March to July of 2020. To allow us to perform mediation analyses, we devised a Bayesian modeling approach that semi-parametrically identifies the infection rate using seroprevalence surveys from the Centers for Disease Control. We are able to show with this analysis how social distancing measures, Trump approval rating, and mask-wearing differentially affected COVID-19 infections through changes in mobility and fear of the pandemic.\\footnote{A reproducible version of this paper is available as an Rmarkdown file at \\url{https://github.com/CoronaNetDataScience/covid_model}}."
+abstract: "In this paper we present an original approach for measuring infections as a latent variable and making use of serological surveys to provide ground truth identification. Compared to existing approaches, our model makes much fewer assumptions and has a simpler form to permit extensive covariate adjustment and mediation analysis. To show the utility of the model, we analyzed COVID-19 case and test data from the fifty United States from March to July of 2020. With our modeling framework we are able to move beyond associations via linear models to more direct testing of hypothesized mechanisms for COVID-19 transmission as a function of human behavior and preferences. We are able to show with this analysis how social distancing measures, Trump approval rating, and mask-wearing are associated with COVID-19 infections through mediated changes in cell phone mobility and opinion polling.\\footnote{A reproducible version of this paper is available as an Rmarkdown file at \\url{https://github.com/CoronaNetDataScience/covid_model}}."
 ---
 
 ```{r setup, include=FALSE}
@@ -95,35 +95,35 @@ calc_int <- F
 
 \newpage
 
-In the United States and in other politically polarized countries, a profound disagreement over how to respond to the COVID-19 pandemic has undermined efforts to control the disease. However, while we have increasing evidence about the relationship between partisan identities and individual beliefs about COVID-19 [@fan2020; @Grossman202007835], data about partisan identity, along with other social and economic covariates, are rarely included in efforts to model and predict the spread of the disease in the population [@flaxman2020; @sharma2020; @haug2020]. As a result, we have difficulty understanding the causal pathways through which political and social variables affect the course of the pandemic, and in turn are affected by it. In this paper we disaggregate the effects of COVID-19 policies, partisanship and demographic factors on disease outcomes by examining the way that these variables are mediated by individual mobility and fear of the virus.
+The COVID-19 pandemic has led to a significant increase in disease modeling as the demands of a worldwide emergency spurred substantial innovation. Accurately modeling COVID-19 and similar diseases is no simple feat, however, due to multiple forms of selection and measurement bias that are difficult to overcome. The approach we present in this paper differs from existing work by conceptualizing the relative level of infections as a time-varying latent variable and applying Bayesian techniques to obtain a posterior distribution over likely estimates. Furthermore, we directly incorporate serological survey data into the model in a way that allows us to identify the scale of the latent variable without having to make extensive assumptions about transmission dynamics.
 
-To do so, we present an original approach to accurately measure COVID-19 infections that permits mediation analysis while also incorporating testing bias. Compared to existing approaches, our model is both simpler in that it does not require a system of differential ordinary equations with extensive assumptions, but also more robust than off-the-shelf methods like difference-in-difference that are not easily adjusted to handle the unique challenges of epidemic tracking. Because we directly measure COVID-19 infections, and can do so with a flexible semi-parametric form that requires few assumptions, we can probe relevant associations in more depth by examining causal mediation. To make the model identifiable, we calibrate our model estimates of the number of infected with state-level serology surveys from the U.S. Center for Disease Control (CDC).
+This approach has two advantages for applied research. First, the minimal set of assumptions makes the model more robust by incorporating as much uncertainty as possible about the actual infection rate. Existing approaches based on the SIR/SEIR framework often require multiple hard-coded values due to the large number of dynamic compartments that must be estimated. By employing a Bayesian model with weakly informative priors, we can obtain estimates that are more fully a reflection of our underlying uncertainty about the state of the world, rather than having to employ simulation inference or other tools to try to test for the reality of assumptions.
 
-By examining a rich array of covariates and relationships among covariates, we are able to show not only which factors most strongly correlate with rising or falling infections, but also whether these associations are driven by changes in mobility, personal beliefs or other mechanisms. For this reason, even when we cannot make exclusive claims of causal identification, we can still learn about how the associations between covariates and the disease did or did not align with our increasing knowledge about how COVID-19 beliefs translate into human behavior.
+Second, conceptualizing the infection rate as a latent variable within a generative modeling framework permits us to examine covariate relationships in a manner that is more nuanced. As we show in this paper, it is possible for us to employ a wide range of covariates that predict the infection rate and consequently dramatically reduce the uncertainty of our estimates without having to assume any prior relationship between covariates and the attack rate. Second, we are able to examine mediation relationships between covariates and the infection rate, which permits us to be more specific about the pathways through which covariates may be associated with infections. Especially given how difficult it is to achieve causal identification with observational epidemiological data, we believe that employing causal graphs to test for plausible mediation relationships is a way to improve our understanding of potential disease transmission dynamics.
 
-We show with this model that even when estimated jointly with other covariates, political partisanship in the United States has a very strong association with the spread of the pandemic. A 1-SD increase in a state's 2016 vote share for Donald Trump is associated with a cumulative increase of 0.5% to 0.7% of a state's population infected by SARS-CoV-2 mediated by decreasing people's concern over the pandemic. A 1-SD increase in a state's vote share for U.S. President Donald Trump is also associated with a 0.3% to 0.5% increase in a state's infections mediated by increased mobility. We show that offsetting these increases in infections from mobility associated with partisanship would require at least 100 additional days of a state-wide stay-at-home order.
+To apply the model, we estimate the infection rate in the United States from March to July of 2020, a crucial time in the pandemic as substantial uncertainty existed about how to respond to the disease. This uncertainty manifested itself in rapidly changing patterns of human behavior and also political conflict as leaders diverged over their understanding of the disease's threat. While we have increasing evidence about the relationship between partisan identities and individual beliefs about COVID-19 [@fan2020; @Grossman202007835], data about partisan identity, along with other social and economic covariates, are rarely included in efforts to model and predict the spread of the disease in the population [@flaxman2020; @sharma2020; @haug2020]. As a result, we have difficulty understanding the causal pathways through which political and social variables affect the course of the pandemic, and in turn are affected by it. In this paper we disaggregate the effects of COVID-19 policies, partisanship and demographic factors on disease outcomes by examining the way that these variables are mediated by individual mobility and fear of the virus. Even when we cannot make exclusive claims of causal identification, we can still learn in much more detail about time-varying associations between covariates and the disease and the plausible pathways through which beliefs affected actions.
 
-We also find evidence that political activity on the left is positively associated with the spread of the disease, with states that saw a 1-SD increase in social justice protests following the death of George Floyd witnessing an increase in infections as high as 0.4% over time. On the other hand, we do not find that the protests reduced people's fears of the disease or changed mobility patterns, suggesting that the spread of the disease happened solely through increased personal contact at the protests and subsequent chains of transmission.
+We show with this model that political partisanship in the United States had a very strong association with the spread of the pandemic by increasing or reducing people's fear of the virus and also by changing their mobility patterns. A 1-SD increase in a state's 2016 vote share for Donald Trump is associated with a cumulative increase of 0.5% to 0.7% of a state's population infected by SARS-CoV-2 mediated by decreasing people's concern over the pandemic. A 1-SD increase in a state's vote share for U.S. President Donald Trump is also associated with a 0.3% to 0.5% increase in a state's infections mediated by increased mobility. We show that offsetting these increases in infections from mobility associated with partisanship would require at least 100 additional days of a state-wide stay-at-home order.
 
-Our model's estimates also shed light on more conventional factors to control the pandemic, especially social distancing policies. We show that the effect of state-level NPIs targeted at the epidemic varies significantly over the time and exhibits trade-offs in terms of reducing mobility. While stay-at-home orders and business restrictions reduced infections by reducing workplace mobility, they also are associated with increased infections in residential places as more people stayed home. These results demonstrate the difficulty in determining the precise effects of policy changes as they are mediated through individual mobility and beliefs about the seriousness of the disease.
+We also find evidence that political activity on the left is positively associated with the spread of the disease, with states that saw a 1-SD increase in social justice protests following the death of George Floyd witnessing an increase in infections as high as 0.4% over time. On the other hand, we do not find that the protests reduced people's fears of the disease or changed mobility patterns, suggesting that the spread of the disease happened solely through increased personal contact at the protests and subsequent chains of transmission rather than by changing behavioral patterns over long term.
 
-# Human Behavior and the COVID-19 Pandemic
+# Background
+
+As more and more data has become available on observed case counts of the SARS-CoV2 coronavirus, there have been increasing attempts to infer how contextual factors like government policies, partisanship, and temperature affect the disease's spread [@carleton2020; @sajadi2020; @dudel2020; @tansim2020 @brze2020]. The temptation to make inferences from the observed data, however, can result in misleading conclusions. Modeling approaches that fully account for disease dynamics like the SIR/SEIR specifications are very powerful but also require more information than is known about disease progression in the population, requiring researchers to rely on assumptions that are difficult to know with complete confidence [@flaxman2020; @ferguson2020]. For this reason, in this paper we present a retrospective Bayesian model that can adjust for testing bias by estimating the unobservable infection rate up to an unidentified constant. Furthermore, by incorporating informative priors based on serological surveys of infection prevalence, it is possible to put an informative prior on the unobserved infection rate and estimate both recent disease trends and the effect of covariates on the historical spread of the disease.
+
+We can summarize the problem of modeling COVID-19 (and diseases more generally) in terms of two main challenges. The first is the challenge of modeling the spread of the disease given the limitations of testing and reported deaths, which could obfuscate the effect of any covariates with data reporting issues. Second, employing observational data requires nuanced comparisons to be made. To learn the effect of a stay-at-home order, for instance, we would want to compare two regions with similar demographic, social and political characteristics as these could be also influencing human behavior, masking the effect of the stay-at-home order. For example, regions with less political partisanship may be more likely to take prudent behaviors to mitigate COVID-19 and also may be more likely to see stay-at-home orders implemented.
 
 A vast and expanding literature documents connections between many political, economic and social factors with human behavior related to the COVID-19 pandemic [@abouk2021a; @adolph2021; @allcott2020a; @ashraf2020; @barceló2022; @bo2021; @brauner2020a; @courtemanche2020a; @dave2020b; @fellows2020; @flaxman2020b; @haug2020a; @islam2020; @murray; @perra2021; @sebhatu2020; @sharma2021; @zheng2020]. While existing studies have shown these associations primarily through surveys and other individual-level analyses, it is difficult to test whether these factors jointly have an effect on COVID-19 infections. The reason for this difficulty is due to how these variables affect human behavior in general equilibrium. For example, non-pharmaceutical interventions (NPIs) like stay-at-home orders have been associated with reduced infections, but stay-at-home orders were also implemented in a rapidly changing environment as public health policies, new suppression practices like masking and the health of the economy varied. People have faced myriad influences on their choices during the pandemic, and even if we have a strong reason to believe that a certain factor should influence their behavior, estimating that effect when many other contravening and contrasting factors were at play is challenging.
 
 At the same time, estimating these general equilibrium effects even within the limitations of available data is very important to learn what factors are associated with the spread of COVID-19 in realistic conditions. For example, some argued that masking would lead to increased infections because it would reduce concern over the risk of infection [@abaluck2020]. Evaluating this hypothesis ultimately requires general equilibrium analysis as it involves competing influences on human behavior. In other words, is the moral hazard of being falsely protected a greater threat than the positive benefits of reducing infections via masking? Being able to sort, rank and understand socio-economic, political and healthcare-related factors behind the disease's spread is crucial to better understand why and how COVID-19 overwhelmed countries' disease control systems.
 
-<!-- We can summarize the problem of modeling COVID-19 to two main challenges. The first is the challenge of modeling the spread of the disease given the limitations of testing and reported deaths, which could obfuscate the effect of any covariates with data reporting issues. Second, employing observational data requires nuanced comparisons to be made. To learn the effect of a stay-at-home order, for instance, we would want to compare two regions with similar demographic, social and political characteristics as these could be also influencing human behavior, masking the effect of the stay-at-home order. For example, regions with less political partisanship may be more likely to take prudent behaviors to mitigate COVID-19 and also may be more likely to see stay-at-home orders implemented. -->
+In this paper, we seek to address these questions by collecting a rich set of important covariates, implementing models to adjust for bias in COVID-19 data and employ mediation analysis to understand the pathways that covariates affect the spread of the pandemic. We believe that doing so contributes to our emerging understanding of the factors that contributed to the spread of the pandemic, especially with respect to factors that we believe tend to be ignored in epidemiological modeling of COVID-19.
 
-<!-- In addition, learning about the nature of factors that influenced the pandemic is limited by our knowledge of how different mechanisms contribute to changes in human behavior. We have learned since the outbreak of the pandemic that mobility and personal willingness to follow social distancing and mask-wearing requirements are important intermediate mechanisms that can explain whether these individuals become infected [@bonaccorsi2020; @fan2020; @abaluck2020; @song2020a]. As such, it would be very helpful to know whether covariates of interest influence infections through these known pathways or through some other pathway, especially as some mechanisms like mobility are more amenable to policy intervention than others, such as personal beliefs about the disease. -->
-
-In this paper, we seek to address these questions by collecting a rich set of important covariates, implementing models to adjust for bias in COVID-19 data and employ mediation analysis to understand the pathways that covariates affect the spread of the pandemic. We believe that doing so contributes to our emerging understanding of the factors that contributed to the spread of the pandemic, especially with respect to factors that we believe tend to be ignored in epidemiological modeling of COVID-19. We argue that political partisanship can be equally as important to the spread of the pandemic as more conventional factors like the implementation of social-distancing measures.
-
-A literature already exists documenting the role of political identity in individual views towards COVID-19, particularly in the United States, but it has largely remained separate from modeling studies of the spread of the pandemic. Political scientists have focused on partisanship due to the way that the pandemic has been politicized along long-lasting cleavages in U.S. politics. The partisan divide in American politics has become a serious concern in political science and the broader community as identities have hardened in a process ongoing since the 1990s or even earlier [@alesina1995; @rosenthal2007; @poole1997; @grossman2016; @iyengar2015]. The powerful effect of partisanship on American politics has grown even stronger since the polarizing presidency of Donald J. Trump and the hardening of racial identities in the United States [@pew2020]. More recently, political scientists have investigated to what extent partisanship has inhibited preventive measures against the COVID-19 pandemic as President Trump has argued against public health policies like face masks. Research has already shown that Republicans are less likely than Democrats to practice public health behaviors like hand washing [@gadarian2020], to practice social distancing [@andersen2020; @alcott2020; @qiu2020], and to comply with policies targeted against COVID-19 [@fan2020; @Grossman202007835].
+For example, in this paper we show that political partisanship may be equally as important to the spread of the pandemic as more conventional factors like the implementation of social-distancing measures. Political scientists have investigated to what extent partisanship has inhibited preventive measures against the COVID-19 pandemic as President Trump has argued against public health policies like face masks. Research has already shown that Republicans are less likely than Democrats to practice public health behaviors like hand washing [@gadarian2020], to practice social distancing [@andersen2020; @alcott2020; @qiu2020], and to comply with policies targeted against COVID-19 [@fan2020; @Grossman202007835].
 
 While partisanship in favor of President Trump and the Republican party has received the most attention, other types of political mobilization have also come under scrutiny. Of particular note were the protest movements against police brutality that spread across the United States in the summer and fall of 2020. Existing research suggests the protests have not had an adverse effect on COVID-19 infections [@protest2020], though it is again limited by the observational bias we describe later. As such, it is clear that political motivations on both the left and the right have at times led to reduced compliance with COVID-19 precautions, though it is not clear how severe these factors are, especially when compared to other covariates known to affect COVID-19.
 
-The most important of these, which we also study in this article, are the role of government policies to prevent close personal interaction, which are often classified under the umbrella of non-pharmaceutical interventions (NPIs). Some of the most sophisticated of these studies, which employ state-of-the-art epidemiological models of COVID-19, have examined how country-level differences in the implementation of stay-at-home orders and business closures affected the spread of the pandemic in the critical early period [@flaxman2020; @sharma2020; @haug2020]. While these studies have emphasized the difficult inference issues involved with modeling COVID-19 data, they have largely avoided adjusting NPI estimates with sociopolitical covariates like partisanship, making an implicit assumption that the effect of NPI estimates is independent of these types of human behaviors and identities. For this reason, while these studies help us know much more precisely how NPIs affected the spread of the pandemic through exact measures like the reproduction number, they are more limited in making stronger claims of identification of the NPIs and even through what channels NPIs affect human behavior [@sharma2020a].
+<!-- The most important of these, which we also study in this article, are the role of government policies to prevent close personal interaction, which are often classified under the umbrella of non-pharmaceutical interventions (NPIs). Some of the most sophisticated of these studies, which employ state-of-the-art epidemiological models of COVID-19, have examined how country-level differences in the implementation of stay-at-home orders and business closures affected the spread of the pandemic in the critical early period [@flaxman2020; @sharma2020; @haug2020]. While these studies have emphasized the difficult inference issues involved with modeling COVID-19 data, they have largely avoided adjusting NPI estimates with sociopolitical covariates like partisanship, making an implicit assumption that the effect of NPI estimates is independent of these types of human behaviors and identities. For this reason, while these studies help us know much more precisely how NPIs affected the spread of the pandemic through exact measures like the reproduction number, they are more limited in making stronger claims of identification of the NPIs and even through what channels NPIs affect human behavior [@sharma2020a].-->
 
 <!-- Studies of NPIs and other factors arising in the social sciences, on the other hand, tend to address socio-political issues more directly, though they also generally opt for simpler models such as event studies that are easier to estimate with richer covariate sets [@allcott2020; @dave2020]. These studies sometimes also employ cell phone mobility data as a proxy for infections with the assumption that reduced mobility will reduce human contact and consequently the spread of COVID-19. These studies contain more realism in terms of the factors that could explain COVID-19 at the expense of the more sophisticated methods for modeling the spread of the disease. However, even these studies do not normally include relatively novel factors such as partisanship, and do not generally examine the mediation pathways through which policies and demographics may influence behavior. Furthermore, it is difficult to assess whether the more conventional models employed are able to appropriately address the limitations of COVID-19 data. -->
 
@@ -145,9 +145,7 @@ The most important of these, which we also study in this article, are the role o
 
 <!-- Existing models that address these questions generally fall into one of two categories. In the first, models by social scientists investigate how social, economic and political variables affect and are affected by the spread of COVID-19. These models generally attempt to avoid data measurement errors through implementing existing methods, such as time-to-event models and difference-in-difference estimation [@dave2020; @courtemanche2020; @protest2020; @abouk2021]. In a different vein, a growing literature examines the role of NPIs, or government policies attempting to control the pandemic. These studies tend to use more complicated epidemiological models, known as compartmental models, that are more suited to the complexity of the data, but also tend to have much less sophistication in terms of the range of covariates employed for adjustment [@flaxman2020; @ferguson2020; @haug2020; @brauner2020]. The more robust modeling of the disease comes at the cost of being able to employ more extensive and more nuanced covariate adjustment, such as the mediation analysis we employ in this paper. -->
 
-Fitting models that can differentiate causal pathways is difficult because of the complexity of disease modeling with biased observed data. To address this crucial problem, we present a new Bayesian latent variable model that has a similar aim as epidemiological disease-tracking models in that it is designed explicitly to model disease dynamics. However, our model is a significant simplification of the compartmental models employed by epidemiologists to study disease, and in particular SARS-CoV2 [@peak2020; @riou2020; @verity2020; @perkins2020; @lourenco2020; @li2020; @ferguson2020; @carleton2020; @sajadi2020; @dudel2020; @tansim2020; @flaxman2020; @brze2020].
-
-<!-- These models suppose different classes (compartments) of individuals in the population, denoted $S$ for susceptible, $I$ for infectious, and $R$ for removed (other compartments may be added, such as $E$ for exposed). -->
+Fitting models that can differentiate causal pathways is difficult because of the complexity of disease modeling with biased observed data. To address this crucial problem, we present a new Bayesian latent variable model that has a similar aim as epidemiological disease-tracking models in that it is designed explicitly to model disease dynamics. However, our model is a significant simplification of the compartmental models employed by epidemiologists to study disease, and in particular SARS-CoV2 [@peak2020; @riou2020; @verity2020; @perkins2020; @lourenco2020; @li2020; @ferguson2020; @carleton2020; @sajadi2020; @dudel2020; @tansim2020; @flaxman2020; @brze2020]. These models suppose different classes (compartments) of individuals in the population, denoted $S$ for susceptible, $I$ for infectious, and \$R\$ for removed (other compartments may be added, such as $E$ for exposed).
 
 While these models are a powerful expression of the progress of a disease in the population, these models often struggle to provide straightforward estimates when employing empirical data. COVID-19 data, unfortunately, has serious flaws that are increasingly well-known, including limited testing and under-reporting of hospitalizations and deaths [@larremore2020; @sánchez-romero2021]. When such data is unavailable, modelers can compensate by simulating plausible random values or using informative prior distributions, but this makes the model estimates tied to the particular set of values used [@grinsztajn2021]. As a result, the challenges in the estimation of compartmental models with empirical data restrict the ability to employ more rigorous forms of covariate adjustment.
 
@@ -311,7 +309,6 @@ The priors to note are the hierarchical regularizing prior put on the varying te
 \footnotesize{This figure adds mediators $M_{ct}$ (mobility data) and $F_{ct}$ (fear of COVID-19) that mediate the relationship between state-level covariates $X'_{ct}$ and the latent infection rate $I_{ct}$.} Because beliefs precede actions, $F_{ct}$ is causally prior to $M_{ct}$ and can affect infections both via reducing mobility (path $abd$) and directly apart from mobility (path $ae$), such as by encouraging individuals to remain socially distant.
 \end{figure}
 ```
-
 We also extend this model in order to analyze the mediation of a subset of covariates $X'_{ct}$ by adding mediators $M_{ct}$ for mobility and $F_{ct}$ for fear of the disease to the causal diagram, as in Figure 2. Figure 2 has several paths due to the fact that the influence of covariates $X_{ct}$ affects the two mediators differently. Given that beliefs and preferences precede actions, the covariates $X'_{ct}$ first influence $I_{ct}$ along the $ae$ and $abd$ path through perceptions of how dangerous the disease is. These beliefs both affect the chance of an individual getting infected and thus $I_{ct}$ directly on the path $ae$, such as by causing an individual to adopt social distancing behaviors, and also on an indirect path $abd$ by which an increase in a people's fear of the disease reduces mobility as people prefer to stay home.
 
 In addition to pathways through the fear mediator $F_{ct}$, a covariate could influence infections along the pathway through mobility $ed$ without increasing or decreasing fear. This situation could arise if government policies forced people to stay at home against their will and despite their unconcern about the disease. Finally, a covariate could have an unmediated direct effect $g$ on the infection rate. The total effect of a covariate $X_{ct}$ on the spread of the disease is then the sum of all the paths, $abd + af + ed + g$. To calculate the indirect effects and direct effects given the use of the inverse logit function $g^{-1}(\cdot)$, we employ the chain rule as in @winship1983 to calculate the marginal effect of covariates with respect to different pathways to $I_{ct}$.
@@ -1055,7 +1052,6 @@ init_vals <- function() {
 
 
 ```
-
 
 # Data
 
